fix: add $gap variable

--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -1,6 +1,4 @@
-* {
-  margin: 0px;
-}
+$gap: 30px;
 
 .container {
   background-color: #1e1e1e;
@@ -14,7 +12,6 @@
   }
 
   .register-container {
-    // height: 500px;
     background-color: #ffffff !important;
     border-radius: 30px;
     padding: 2rem;
@@ -29,7 +26,7 @@
     .container-inputs {
       display: flex;
       flex-wrap: wrap;
-      gap: 30px;
+      gap: $gap;
 
       .input_container {
         flex: 1 0 46%;
@@ -49,8 +46,9 @@
       margin-top: 42px;
 
       .button {
-        flex: 1 0 46%;
-        max-width: 46%;
+        // flex: 1 0 ;
+        max-width: calc(46% + $gap);
+        width: 100%;
       }
     }
   }
